argocd/applications/apps/services/amp/manifests/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: amp
  labels:
    name: amp
