argocd/applications/apps/services/amp/manifests/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: amp
  namespace: amp
  labels:
    app: amp
spec:
  type: LoadBalancer
  selector:
    app: amp
  ports:
  - name: web
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: amp-core
    port: 8081
    targetPort: 8081
    protocol: TCP
  # Game server ports
  - name: minecraft
    port: 25565
    targetPort: 25565
    protocol: TCP
